kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: foobar-api
  namespace: default
spec:
  selector:
    app: foobar-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
